fix: align checkbox properly

--- a/components/checkbox/src/styles/color.scss
+++ b/components/checkbox/src/styles/color.scss
@@ -5,7 +5,6 @@
 
 /* stylelint-disable selector-class-pattern, order/properties-order, no-descending-specificity */
 
-@use "@aurodesignsystem/design-tokens/dist/legacy/auro-classic/SCSSVariables" as vac;
 @use "@aurodesignsystem/design-tokens/dist/themes/alaska/SCSSVariables--alaska" as v;
 
 :host(:not([checked])) {
@@ -48,7 +47,7 @@
   --ds-auro-checkbox-border-color: var(--ds-advanced-color-boolean-istrue, #{v.$ds-advanced-color-boolean-istrue});
   --ds-auro-checkbox-container-color: var(--ds-advanced-color-boolean-istrue, #{v.$ds-advanced-color-boolean-istrue});
 
-  .label--cbx {
+  .inputContainer {
     &:hover {
       --ds-auro-checkbox-border-color: var(--ds-advanced-color-boolean-istrue-hover, #{v.$ds-advanced-color-boolean-istrue-hover});
       --ds-auro-checkbox-container-color: var(--ds-advanced-color-boolean-istrue-hover, #{v.$ds-advanced-color-boolean-istrue-hover});
